apps/jellyfin/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  hostnames:
    - jellyfin.fuochi.top
  parentRefs:
    - name: star-fuochi-top
      namespace: cilium
      sectionName: https
  rules:
    - backendRefs:
        - name: jellyfin
          port: 8096
      matches:
        - path:
            type: PathPrefix
            value: /
